23.7
-----
* [*] Bug fix: Reader now scrolls to the top when tapping the status bar. [#21914]
* [*] [internal] Refactor sending the API requests for searching posts and pages. [#21976]
* [*] Fix an issue in Menu screen where it fails to create default menu items. [#21949]
* [*] [internal] Refactor how site's pages are loaded in Site Settings -> Homepage Settings. [#21974]

23.6
-----
* [***] [Jetpack-only] Added paid domain selection, plan selection, and checkout screens in site creation flow [#21688]
* [**] When moving a post to trash, show a toast message with undo action instead of an inline undo row. [#21724]
* [*] Site Domains: Fixed an issue where the message shared while adding a domain was inaccurate. [#21827]
* [*] Fix an issue where login with site address is blocked after failing the first attempt. [#21848]
* [*] Fix an issue with an issue [#16999] with HTML not being stripped from post titles [#21846]
* [*] Fix an issue that leads to an ambiguous error message when an incorrect SMS 2FA code is submitted. [#21863]
* [*] Fix an issue where two 2FA controllers were being opened at the same time when logging in. [#21865]
* [*] Block Editor Social Icons: Fix visibility of inactive icons when used with block based themes in dark mode [https://github.com/WordPress/gutenberg/pull/55398]
* [*] Block Editor Classic block: Add option to convert to blocks [https://github.com/WordPress/gutenberg/pull/55461]
* [*] Block Editor Synced Patterns: Fix visibility of heading section when used with block based themes in dark mode [https://github.com/WordPress/gutenberg/pull/55399]

23.5
-----
* [*] Fix a crash when the blog's blogging prompt settings contain invalid JSON [#21677]
* [*] [WordPress-only] Fixes an issue where users would land on the Reader after signup while it should not be accessible. [#21751]
* [*] Block Editor: Split formatted text on triple Enter [https://github.com/WordPress/gutenberg/pull/53354]