@@ -375,7 +375,6 @@ class PrepublishingViewController: UITableViewController {
             sourceView: tableView.cellForRow(at: indexPath)?.contentView,
             sourceRect: nil,
             viewModel: publishSettingsViewModel,
-            transitioningDelegate: nil,
             updated: { [weak self] date in
                 WPAnalytics.track(.editorPostScheduledChanged, properties: Constants.analyticsDefaultProperty)
                 self?.publishSettingsViewModel.setDate(date)
