@@ -1,49 +1,33 @@
 import Foundation
 import UIKit
 
-protocol PresentableSchedulingViewControllerProviding {
+class PresentableSchedulingViewControllerProvider {
     static func viewController(sourceView: UIView?,
                                sourceRect: CGRect?,
                                viewModel: PublishSettingsViewModel,
-                               transitioningDelegate: UIViewControllerTransitioningDelegate?,
-                               updated: @escaping (Date?) -> Void,
-                               onDismiss: (() -> Void)?) -> UINavigationController
-}
-
-class PresentableSchedulingViewControllerProvider: PresentableSchedulingViewControllerProviding {
-    static func viewController(sourceView: UIView?,
-                               sourceRect: CGRect?,
-                               viewModel: PublishSettingsViewModel,
-                               transitioningDelegate: UIViewControllerTransitioningDelegate?,
                                updated: @escaping (Date?) -> Void,
                                onDismiss: (() -> Void)?) -> UINavigationController {
         let schedulingViewController = schedulingViewController(with: viewModel, updated: updated)
         return wrappedSchedulingViewController(schedulingViewController,
                                                sourceView: sourceView,
                                                sourceRect: sourceRect,
-                                               transitioningDelegate: transitioningDelegate,
                                                onDismiss: onDismiss)
     }
 
     static func wrappedSchedulingViewController(_ schedulingViewController: SchedulingDatePickerViewController,
                                                 sourceView: UIView?,
                                                 sourceRect: CGRect?,
-                                                transitioningDelegate: UIViewControllerTransitioningDelegate?,
                                                 onDismiss: (() -> Void)?) -> SchedulingLightNavigationController {
         let vc = SchedulingLightNavigationController(rootViewController: schedulingViewController)
         vc.onDismiss = onDismiss
 
         if UIDevice.isPad() {
             vc.modalPresentationStyle = .popover
-        } else {
-            vc.modalPresentationStyle = .custom
-            vc.transitioningDelegate = transitioningDelegate ?? schedulingViewController
-        }
-
-        if let popoverController = vc.popoverPresentationController,
-           let sourceView = sourceView {
-            popoverController.sourceView = sourceView
-            popoverController.sourceRect = sourceRect ?? sourceView.frame
+            if let popoverController = vc.popoverPresentationController,
+               let sourceView = sourceView {
+                popoverController.sourceView = sourceView
+                popoverController.sourceRect = sourceRect ?? sourceView.frame
+            }
         }
         return vc
     }
